iowow (1.2.15) UNRELEASED; urgency=medium

  * `IWKV_PUT_HANDLER` called for insert operations (not only for updates)
  * Added `IWFS_OUNLINK` flag. Unlink(delete) file on close (iwfile.h)
  * Added `IWFS_OTMP` flag. Create tmp file (iwfile.h)
  * Added UUID v4 generation function (iwuuid.h)
  * Added iwp_tmpdir() (iwp.h)
  * Added iwp_allocate_tmpfile_path() (iwp.h)

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 09 Nov 2018 00:57:42 +0700

iowow (1.2.14) testing; urgency=medium

  * BUG: Fix WAL checkpoint workflow to avoid deadlocks with cursor threads
  * BUG: Clang6 fatal error: variable 'cur' is used uninitialized  (#15)
  * Implemented new multithreaded stress test (iwkv_test6.c) used OMP stack
  * Added iwkv_new_db(IWKV iwkv, iwdb_flags_t dbflg, uint32_t *odbid, IWDB *dbp) (iwkv.h)
  * Removed unused `IWKV_NOLOCKS` option.
  * Added `IW_EXPORT` to `iowow_version_*` API functions  (iowow.h)
  * Added iwrc iwkv_state(IWKV iwkv, IWFS_FSM_STATE *out) (iwkv.h)
  * Do not check `IWKV_NO_OVERWRITE` for databases in `IWDB_DUP_UINTXX_VALS` mode
  * Added iwkv_puth() with provided old value interceptor: `IWKV_PUT_HANDLER` (iwkv.h)
  * Added `IWKV_RC_DUP_ARRAY_EMPTY` flag and `IWKV_DUP_REPORT_EMPTY` opflag for `iwkv_put()` (iwkv.h)

 -- Anton Adamansky <adamansky@gmail.com>  Tue, 06 Nov 2018 23:14:39 +0700

iowow (1.2.13) testing; urgency=medium

  * BUG: Correct cursors adjustments during db update operations (#13)
  * BUG: Fixed WAL integration for updates in IWDB_DUP_UINT32_VALS|IWDB_DUP_UINT64_VALS mode
  * Store arbitrary data blocks associated with iwkv internal databases (#12)
  * Checking of max key/value size (IWKV_MAX_KVSZ) for updates in IWDB_DUP_UINT32_VALS|IWDB_DUP_UINT64_VALS mode
  * Minor allocation performance optimizations in _kvblk_addkv()

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 02 Aug 2018 20:29:08 +0700

iowow (1.2.12) testing; urgency=medium

  * Set terminating '\0' in iwitoa() (iwconv.h)